Remove max-width from buttons on mobile, to ensure equal length.

--- a/style.css
+++ b/style.css
@@ -725,5 +725,6 @@ a.giveNow:hover {
 		/* ---- Button (group) Styles ---- */
 	.button-set {
 		display: block !important;
+		max-width: none !important;
 	}
 }
